fix: Fix landing page title

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </div>
         </nav>
         <div class="header-content">
-          <h1 class="header-title">Bienvenido a HampCode Banking</h1>
+          <h1 class="header-title">Bienvenido a Ali Lozano Banking</h1>
           <p class="header-description">
             La mejor herramienta para el control de tus finanzas.
           </p>
